--- a/app/views/pfeeds/_user_updated_attribute.html.erb
+++ b/app/views/pfeeds/_user_updated_attribute.html.erb
@@ -1,7 +1,6 @@
 <h2>
 <font color="blue"><%= user_updated_attribute.guess_identification(user_updated_attribute.originator) %></font>
 <%= user_updated_attribute.data[:action_string] %> <%= user_updated_attribute.data[:attribute_name] %>
-at 
-<%= user_updated_attribute.created_at %>  
+about <%= time_ago_in_words(user_updated_attribute.created_at) %> ago 
 
 </h2>
