support easier use in atom/rss feeds, don't rescue errors - use a space instead of a new line as white space

--- a/app/views/pfeeds/_pfeed.html.erb
+++ b/app/views/pfeeds/_pfeed.html.erb
@@ -1,11 +1,3 @@
-<ul class="pfeed_container">
-  <li>
-  <%=
-    begin
-      render(:partial => "pfeeds/#{pfeed.view_template_name}", :object => pfeed)
-    rescue
-      "<!-- error in #{pfeed.view_template_name}: #{$!.to_s.split("\n").join("-->\n<!--")} -->"
-    end
-  %>
-  </li>
-</ul>
+<li class="pfeed_container">
+  <%= pfeed_content(pfeed) %>
+</li>
